# assignment

./: README.md
net2grid-task/: CMakeLists.txt  readme.md
net2grid-task/inc/: change.h  linked_list.h  print.h
net2grid-task/src/: change.c  linked_list.c  main.c  print.c
net2grid-task/test/: test_linked_list.c
net2grid_task2/: CMakeLists.txt  readme.md
net2grid_task2/inc/: x_to_y_int.h
net2grid_task2/src/: main.c  x_to_y_int.c
net2grid_task2/test/: task2_tests.c
